src/styles/Homepage.css
body {
  overflow-x: hidden;
  font-family: "Roboto", sans-serif;
  font-family: "Rubik", sans-serif;
  background: url("../images/pexels-photo-3661445.jpeg");
  background-size: contain;
  background-position: top;
  background: cover;
}

.card-title {
  padding-top: 30px;
  padding-left: 30px;
  color: rgb(82, 82, 82);
  font-weight: bold;
  line-height: 1.9;
}

body {
  background-color: rgb(161, 160, 160);
}

.aboutSection {
  margin-bottom: 50px;
  /* margin-left: auto;
  margin-right: auto; */
  margin-top: 40px;
}

.about {
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 30px;
  /* background: white; */
  color: rgb(82, 82, 82);
  line-height: 1.5rem;
}

.NWlogoAbout {
  color: rgb(82, 82, 82);
}

.cv,
.email {
  color: #582c4d;
  font-weight: bold;
}
.skills-items {
  width: 100%;
  color: rgb(82, 82, 82);
}

.listContainer {
  display: flex;
  width: 100%;
  padding-top: 20px;
  padding-bottom: 20px;
  justify-content: space-evenly;
  margin-left: auto;
  margin-right: auto;
}

.cardContainer {
  line-height: 2rem;
  position: relative;
  margin: auto;
}

.section {
  background: #f3e5f5;
  padding: 20px;
  line-height: 1.5;
}

.section h2 {
  text-align: center;
}

.card-1,
.card-2 {
  box-shadow: 5px 5px 5px 5px rgb(82, 82, 82);
  margin-left: 0px !important;
  border-radius: 5px !important;
}

.card-body {
  background: white;
  /* margin-top: 125px; */
  padding: 0;
  border-radius: 5px !important;
}

.agileLogo,
.microsoftLogo,
.jQueryLogo,
.htmlLogo {
  width: 10%;
  height: 50%;
}

.reactLogo,
.javaScriptLogo,
.cssLogo,
.githubLogo,
.bootstrapLogo {
  width: 5%;
  height: 50%;
}

@media (max-width: 458px) {
  .listContainer {
    display: block;
    justify-content: left;
  }

  .agileLogo,
  .microsoftLogo,
  .jQueryLogo,
  .htmlLogo {
    width: 50%;
    height: 50%;
    margin-left: auto;
    margin-right: auto;
  }
  .cssLogo,
  .reactLogo,
  .javaScriptLogo,
  .githubLogo,
  .bootstrapLogo {
    width: 25%;
    height: 25%;
    margin-left: auto;
    margin-right: auto;
  }

  .listContainer {
    justify-content: center;
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 50px;
  }

  .bootstrapLogo,
  .reactLogo {
    margin-left: 30px;
  }

  .microsoftLogo {
    margin-left: 50px;
  }
  .card-title {
    margin-top: 75px;
  }
}

.cv:hover,
.email:hover {
  color: white;
  background-color: #582c4d;
  text-decoration: none;
  font-weight: bold;
  border-radius: 2px !important;
  padding: 3px;
}

